CompilerPrinceple/parser.output
Terminals unused in grammar

   EXT_DEF_LIST
   EXT_VAR_DEF
   FUNC_DEF
   FUNC_DEC
   EXT_DEC_LIST
   PARAM_LIST
   PARAM_DEC
   VAR_DEF
   DEC_LIST
   DEF_LIST
   COMP_STM
   STM_LIST
   EXP_STMT
   IF_THEN
   IF_THEN_ELSE
   ARRAY_LIST
   ARRAY_ID
   FUNC_CALL
   ARGS
   FUNCTION
   PARAM
   ARG
   CALL
   LABEL
   GOTO
   JLT
   JLE
   JGT
   JGE
   EQ
   NEQ
   FOR_DEC
   STRUCT_DEF
   STRUCT_DEC
   STRUCT_NAME
   ACCESS_MEMBER
   SWITCH_STMT
   CASE_STMT
   DEFAULT_STMT
   CASE_STMT_LIST


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE
    8          | StructSpecifier

    9 StructSpecifier: STRUCT OptTag LC DefList RC
   10                | STRUCT Tag

   11 OptTag: %empty
   12       | ID

   13 Tag: ID

   14 Arraylist: LB INT RB
   15          | LB INT RB Arraylist

   16 ExtDecList: VarDec
   17           | VarDec COMMA ExtDecList

   18 VarDec: ID
   19       | ID Arraylist
   20       | ID Arraylist ASSIGNOP Exp
   21       | ID ASSIGNOP Exp

   22 FuncDec: ID LP VarList RP
   23        | ID LP RP

   24 VarList: ParamDec
   25        | ParamDec COMMA VarList

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmList RC

   28 StmList: %empty
   29        | Stmt StmList

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | FOR LP ForDec RP Stmt
   37     | CONTINUE SEMI
   38     | BREAK SEMI
   39     | SWITCH LP Exp RP LC CaseStmtList RC

   40 DefaultStmt: DEFAULT COLON StmList

   41 CaseStmt: CASE INT COLON StmList
   42         | CASE CHAR COLON StmList

   43 CaseStmtList: %empty
   44             | CaseStmt CaseStmtList
   45             | DefaultStmt

   46 ForDec: Exp SEMI Exp SEMI Exp
   47       | SEMI Exp SEMI

   48 DefList: %empty
   49        | Def DefList
   50        | error SEMI

   51 Def: Specifier DecList SEMI

   52 DecList: Dec
   53        | Dec COMMA DecList

   54 Dec: VarDec

   55 Exp: Exp ASSIGNOP Exp
   56    | Exp PLUS_ASSIGN_OP Exp
   57    | Exp MINUS_ASSIGN_OP Exp
   58    | Exp MULT_ASSIGN_OP Exp
   59    | Exp DIV_ASSIGN_OP Exp
   60    | Exp MOD_ASSIGN_OP Exp
   61    | Exp AND Exp
   62    | Exp OR Exp
   63    | Exp RELOP Exp
   64    | Exp PLUS Exp
   65    | Exp MINUS Exp
   66    | Exp STAR Exp
   67    | Exp DIV Exp
   68    | Exp MOD Exp
   69    | Exp AUTOPLUS
   70    | Exp AUTOMINUS
   71    | AUTOPLUS Exp
   72    | AUTOMINUS Exp
   73    | LP Exp RP
   74    | MINUS Exp
   75    | NOT Exp
   76    | DPLUS Exp
   77    | Exp DPLUS
   78    | ID LP Args RP
   79    | ID LP RP
   80    | ID
   81    | INT
   82    | FLOAT
   83    | CHAR
   84    | STRING
   85    | ID Arraylist
   86    | LB Args RB
   87    | Exp DOT ID

   88 Args: Exp COMMA Args
   89     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6 50
INT (258) 14 15 41 81
ID (259) 12 13 18 19 20 21 22 23 78 79 80 85 87
RELOP (260) 63
TYPE (261) 7
FLOAT (262) 82
CHAR (263) 42 83
STRING (264) 84
STRUCT (265) 9 10
DPLUS (266) 76 77
LP (267) 22 23 33 34 35 36 39 73 78 79
RP (268) 22 23 33 34 35 36 39 73 78 79
LC (269) 9 27 39
RC (270) 9 27 39
LB (271) 14 15 86
RB (272) 14 15 86
SEMI (273) 4 6 30 32 37 38 46 47 50 51
COMMA (274) 17 25 53 88
DOT (275) 87
PLUS (276) 64
MINUS (277) 65 74
STAR (278) 66
DIV (279) 67
MOD (280) 68
ASSIGNOP (281) 20 21 55
PLUS_ASSIGN_OP (282) 56
MINUS_ASSIGN_OP (283) 57
MULT_ASSIGN_OP (284) 58
DIV_ASSIGN_OP (285) 59
MOD_ASSIGN_OP (286) 60
AND (287) 61
OR (288) 62
NOT (289) 75
AUTOPLUS (290) 69 71
AUTOMINUS (291) 70 72
IF (292) 33 34
ELSE (293) 34
WHILE (294) 35
RETURN (295) 32
FOR (296) 36
CONTINUE (297) 37
BREAK (298) 38
SWITCH (299) 39
CASE (300) 41 42
DEFAULT (301) 40
COLON (302) 40 41 42
EXT_DEF_LIST (303)
EXT_VAR_DEF (304)
FUNC_DEF (305)
FUNC_DEC (306)
EXT_DEC_LIST (307)
PARAM_LIST (308)
PARAM_DEC (309)
VAR_DEF (310)
DEC_LIST (311)
DEF_LIST (312)
COMP_STM (313)
STM_LIST (314)
EXP_STMT (315)
IF_THEN (316)
IF_THEN_ELSE (317)
ARRAY_LIST (318)
ARRAY_ID (319)
FUNC_CALL (320)
ARGS (321)
FUNCTION (322)
PARAM (323)
ARG (324)
CALL (325)
LABEL (326)
GOTO (327)
JLT (328)
JLE (329)
JGT (330)
JGE (331)
EQ (332)
NEQ (333)
FOR_DEC (334)
STRUCT_DEF (335)
STRUCT_DEC (336)
STRUCT_NAME (337)
ACCESS_MEMBER (338)
SWITCH_STMT (339)
CASE_STMT (340)
DEFAULT_STMT (341)
CASE_STMT_LIST (342)
UMINUS (343)
LOWER_THEN_ELSE (344)


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
program (91)
    on left: 1, on right: 0
ExtDefList (92)
    on left: 2 3, on right: 1 3
ExtDef (93)
    on left: 4 5 6, on right: 3
Specifier (94)
    on left: 7 8, on right: 4 5 26 51
StructSpecifier (95)
    on left: 9 10, on right: 8
OptTag (96)
    on left: 11 12, on right: 9
Tag (97)
    on left: 13, on right: 10
Arraylist (98)
    on left: 14 15, on right: 15 19 20 85
ExtDecList (99)
    on left: 16 17, on right: 4 17
VarDec (100)
    on left: 18 19 20 21, on right: 16 17 26 54
FuncDec (101)
    on left: 22 23, on right: 5
VarList (102)
    on left: 24 25, on right: 22 25
ParamDec (103)
    on left: 26, on right: 24 25
CompSt (104)
    on left: 27, on right: 5 31
StmList (105)
    on left: 28 29, on right: 27 29 40 41 42
Stmt (106)
    on left: 30 31 32 33 34 35 36 37 38 39, on right: 29 33 34 35 36
DefaultStmt (107)
    on left: 40, on right: 45
CaseStmt (108)
    on left: 41 42, on right: 44
CaseStmtList (109)
    on left: 43 44 45, on right: 39 44
ForDec (110)
    on left: 46 47, on right: 36
DefList (111)
    on left: 48 49 50, on right: 9 27 49
Def (112)
    on left: 51, on right: 49
DecList (113)
    on left: 52 53, on right: 51 53
Dec (114)
    on left: 54, on right: 52 53
Exp (115)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 76 77 78 79 80 81 82 83 84 85 86 87, on right: 20 21 30
    32 33 34 35 39 46 47 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71 72 73 74 75 76 77 87 88 89
Args (116)
    on left: 88 89, on right: 78 86 88


State 0

    0 $accept: . program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


State 3

    9 StructSpecifier: STRUCT . OptTag LC DefList RC
   10                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 11 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: program . $end

    $end  shift, and go to state 13


State 5

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FuncDec     go to state 18


State 8

    8 Specifier: StructSpecifier .

    $default  reduce using rule 8 (Specifier)


State 9

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


State 10

   12 OptTag: ID .
   13 Tag: ID .

    ID        reduce using rule 13 (Tag)
    $default  reduce using rule 12 (OptTag)


State 11

    9 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 12

   10 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 10 (StructSpecifier)


State 13

    0 $accept: program $end .

    $default  accept


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

   18 VarDec: ID .
   19       | ID . Arraylist
   20       | ID . Arraylist ASSIGNOP Exp
   21       | ID . ASSIGNOP Exp
   22 FuncDec: ID . LP VarList RP
   23        | ID . LP RP

    LP        shift, and go to state 20
    LB        shift, and go to state 21
    ASSIGNOP  shift, and go to state 22

    $default  reduce using rule 18 (VarDec)

    Arraylist  go to state 23


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 17

   16 ExtDecList: VarDec .
   17           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 25

    $default  reduce using rule 16 (ExtDecList)


State 18

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


State 19

    9 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 48 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 30
    Def              go to state 31


State 20

   22 FuncDec: ID LP . VarList RP
   23        | ID LP . RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 32

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 21

   14 Arraylist: LB . INT RB
   15          | LB . INT RB Arraylist

    INT  shift, and go to state 36


State 22

   21 VarDec: ID ASSIGNOP . Exp

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 49


State 23

   19 VarDec: ID Arraylist .
   20       | ID Arraylist . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 50

    $default  reduce using rule 19 (VarDec)


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   17 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 51

    ExtDecList  go to state 52
    VarDec      go to state 17


State 26

   27 CompSt: LC . DefList StmList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT        reduce using rule 48 (DefList)
    ID         reduce using rule 48 (DefList)
    FLOAT      reduce using rule 48 (DefList)
    CHAR       reduce using rule 48 (DefList)
    STRING     reduce using rule 48 (DefList)
    DPLUS      reduce using rule 48 (DefList)
    LP         reduce using rule 48 (DefList)
    LC         reduce using rule 48 (DefList)
    RC         reduce using rule 48 (DefList)
    LB         reduce using rule 48 (DefList)
    MINUS      reduce using rule 48 (DefList)
    NOT        reduce using rule 48 (DefList)
    AUTOPLUS   reduce using rule 48 (DefList)
    AUTOMINUS  reduce using rule 48 (DefList)
    IF         reduce using rule 48 (DefList)
    WHILE      reduce using rule 48 (DefList)
    RETURN     reduce using rule 48 (DefList)
    FOR        reduce using rule 48 (DefList)
    CONTINUE   reduce using rule 48 (DefList)
    BREAK      reduce using rule 48 (DefList)
    SWITCH     reduce using rule 48 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 31


State 27

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


State 28

   50 DefList: error . SEMI

    SEMI  shift, and go to state 54


State 29

   51 Def: Specifier . DecList SEMI

    ID  shift, and go to state 51

    VarDec   go to state 55
    DecList  go to state 56
    Dec      go to state 57


State 30

    9 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 58


State 31

   49 DefList: Def . DefList

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT        reduce using rule 48 (DefList)
    ID         reduce using rule 48 (DefList)
    FLOAT      reduce using rule 48 (DefList)
    CHAR       reduce using rule 48 (DefList)
    STRING     reduce using rule 48 (DefList)
    DPLUS      reduce using rule 48 (DefList)
    LP         reduce using rule 48 (DefList)
    LC         reduce using rule 48 (DefList)
    RC         reduce using rule 48 (DefList)
    LB         reduce using rule 48 (DefList)
    MINUS      reduce using rule 48 (DefList)
    NOT        reduce using rule 48 (DefList)
    AUTOPLUS   reduce using rule 48 (DefList)
    AUTOMINUS  reduce using rule 48 (DefList)
    IF         reduce using rule 48 (DefList)
    WHILE      reduce using rule 48 (DefList)
    RETURN     reduce using rule 48 (DefList)
    FOR        reduce using rule 48 (DefList)
    CONTINUE   reduce using rule 48 (DefList)
    BREAK      reduce using rule 48 (DefList)
    SWITCH     reduce using rule 48 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 59
    Def              go to state 31


State 32

   23 FuncDec: ID LP RP .

    $default  reduce using rule 23 (FuncDec)


State 33

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 51

    VarDec  go to state 60


State 34

   22 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 61


State 35

   24 VarList: ParamDec .
   25        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 62

    $default  reduce using rule 24 (VarList)


State 36

   14 Arraylist: LB INT . RB
   15          | LB INT . RB Arraylist

    RB  shift, and go to state 63


State 37

   81 Exp: INT .

    $default  reduce using rule 81 (Exp)


State 38

   78 Exp: ID . LP Args RP
   79    | ID . LP RP
   80    | ID .
   85    | ID . Arraylist

    LP  shift, and go to state 64
    LB  shift, and go to state 21

    $default  reduce using rule 80 (Exp)

    Arraylist  go to state 65


State 39

   82 Exp: FLOAT .

    $default  reduce using rule 82 (Exp)


State 40

   83 Exp: CHAR .

    $default  reduce using rule 83 (Exp)


State 41

   84 Exp: STRING .

    $default  reduce using rule 84 (Exp)


State 42

   76 Exp: DPLUS . Exp

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 66


State 43

   73 Exp: LP . Exp RP

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 67


State 44

   86 Exp: LB . Args RB

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp   go to state 68
    Args  go to state 69


State 45

   74 Exp: MINUS . Exp

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 70


State 46

   75 Exp: NOT . Exp

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 71


State 47

   71 Exp: AUTOPLUS . Exp

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 72


State 48

   72 Exp: AUTOMINUS . Exp

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 73


State 49

   21 VarDec: ID ASSIGNOP Exp .
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . PLUS_ASSIGN_OP Exp
   57    | Exp . MINUS_ASSIGN_OP Exp
   58    | Exp . MULT_ASSIGN_OP Exp
   59    | Exp . DIV_ASSIGN_OP Exp
   60    | Exp . MOD_ASSIGN_OP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   68    | Exp . MOD Exp
   69    | Exp . AUTOPLUS
   70    | Exp . AUTOMINUS
   77    | Exp . DPLUS
   87    | Exp . DOT ID

    RELOP            shift, and go to state 74
    DPLUS            shift, and go to state 75
    DOT              shift, and go to state 76
    PLUS             shift, and go to state 77
    MINUS            shift, and go to state 78
    STAR             shift, and go to state 79
    DIV              shift, and go to state 80
    MOD              shift, and go to state 81
    ASSIGNOP         shift, and go to state 82
    PLUS_ASSIGN_OP   shift, and go to state 83
    MINUS_ASSIGN_OP  shift, and go to state 84
    MULT_ASSIGN_OP   shift, and go to state 85
    DIV_ASSIGN_OP    shift, and go to state 86
    MOD_ASSIGN_OP    shift, and go to state 87
    AND              shift, and go to state 88
    OR               shift, and go to state 89
    AUTOPLUS         shift, and go to state 90
    AUTOMINUS        shift, and go to state 91

    $default  reduce using rule 21 (VarDec)


State 50

   20 VarDec: ID Arraylist ASSIGNOP . Exp

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 92


State 51

   18 VarDec: ID .
   19       | ID . Arraylist
   20       | ID . Arraylist ASSIGNOP Exp
   21       | ID . ASSIGNOP Exp

    LB        shift, and go to state 21
    ASSIGNOP  shift, and go to state 22

    $default  reduce using rule 18 (VarDec)

    Arraylist  go to state 23


State 52

   17 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 17 (ExtDecList)


State 53

   27 CompSt: LC DefList . StmList RC

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LC         shift, and go to state 26
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48
    IF         shift, and go to state 93
    WHILE      shift, and go to state 94
    RETURN     shift, and go to state 95
    FOR        shift, and go to state 96
    CONTINUE   shift, and go to state 97
    BREAK      shift, and go to state 98
    SWITCH     shift, and go to state 99

    $default  reduce using rule 28 (StmList)

    CompSt   go to state 100
    StmList  go to state 101
    Stmt     go to state 102
    Exp      go to state 103


State 54

   50 DefList: error SEMI .

    $default  reduce using rule 50 (DefList)


State 55

   54 Dec: VarDec .

    $default  reduce using rule 54 (Dec)


State 56

   51 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 104


State 57

   52 DecList: Dec .
   53        | Dec . COMMA DecList

    COMMA  shift, and go to state 105

    $default  reduce using rule 52 (DecList)


State 58

    9 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 9 (StructSpecifier)


State 59

   49 DefList: Def DefList .

    $default  reduce using rule 49 (DefList)


State 60

   26 ParamDec: Specifier VarDec .

    $default  reduce using rule 26 (ParamDec)


State 61

   22 FuncDec: ID LP VarList RP .

    $default  reduce using rule 22 (FuncDec)


State 62

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 106
    ParamDec         go to state 35


State 63

   14 Arraylist: LB INT RB .
   15          | LB INT RB . Arraylist

    LB  shift, and go to state 21

    $default  reduce using rule 14 (Arraylist)

    Arraylist  go to state 107


State 64

   78 Exp: ID LP . Args RP
   79    | ID LP . RP

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    RP         shift, and go to state 108
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp   go to state 68
    Args  go to state 109


State 65

   85 Exp: ID Arraylist .

    $default  reduce using rule 85 (Exp)


State 66

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . PLUS_ASSIGN_OP Exp
   57    | Exp . MINUS_ASSIGN_OP Exp
   58    | Exp . MULT_ASSIGN_OP Exp
   59    | Exp . DIV_ASSIGN_OP Exp
   60    | Exp . MOD_ASSIGN_OP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   68    | Exp . MOD Exp
   69    | Exp . AUTOPLUS
   70    | Exp . AUTOMINUS
   76    | DPLUS Exp .
   77    | Exp . DPLUS
   87    | Exp . DOT ID

    DPLUS  shift, and go to state 75
    DOT    shift, and go to state 76

    $default  reduce using rule 76 (Exp)


State 67

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . PLUS_ASSIGN_OP Exp
   57    | Exp . MINUS_ASSIGN_OP Exp
   58    | Exp . MULT_ASSIGN_OP Exp
   59    | Exp . DIV_ASSIGN_OP Exp
   60    | Exp . MOD_ASSIGN_OP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   68    | Exp . MOD Exp
   69    | Exp . AUTOPLUS
   70    | Exp . AUTOMINUS
   73    | LP Exp . RP
   77    | Exp . DPLUS
   87    | Exp . DOT ID

    RELOP            shift, and go to state 74
    DPLUS            shift, and go to state 75
    RP               shift, and go to state 110
    DOT              shift, and go to state 76
    PLUS             shift, and go to state 77
    MINUS            shift, and go to state 78
    STAR             shift, and go to state 79
    DIV              shift, and go to state 80
    MOD              shift, and go to state 81
    ASSIGNOP         shift, and go to state 82
    PLUS_ASSIGN_OP   shift, and go to state 83
    MINUS_ASSIGN_OP  shift, and go to state 84
    MULT_ASSIGN_OP   shift, and go to state 85
    DIV_ASSIGN_OP    shift, and go to state 86
    MOD_ASSIGN_OP    shift, and go to state 87
    AND              shift, and go to state 88
    OR               shift, and go to state 89
    AUTOPLUS         shift, and go to state 90
    AUTOMINUS        shift, and go to state 91


State 68

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . PLUS_ASSIGN_OP Exp
   57    | Exp . MINUS_ASSIGN_OP Exp
   58    | Exp . MULT_ASSIGN_OP Exp
   59    | Exp . DIV_ASSIGN_OP Exp
   60    | Exp . MOD_ASSIGN_OP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   68    | Exp . MOD Exp
   69    | Exp . AUTOPLUS
   70    | Exp . AUTOMINUS
   77    | Exp . DPLUS
   87    | Exp . DOT ID
   88 Args: Exp . COMMA Args
   89     | Exp .

    RELOP            shift, and go to state 74
    DPLUS            shift, and go to state 75
    COMMA            shift, and go to state 111
    DOT              shift, and go to state 76
    PLUS             shift, and go to state 77
    MINUS            shift, and go to state 78
    STAR             shift, and go to state 79
    DIV              shift, and go to state 80
    MOD              shift, and go to state 81
    ASSIGNOP         shift, and go to state 82
    PLUS_ASSIGN_OP   shift, and go to state 83
    MINUS_ASSIGN_OP  shift, and go to state 84
    MULT_ASSIGN_OP   shift, and go to state 85
    DIV_ASSIGN_OP    shift, and go to state 86
    MOD_ASSIGN_OP    shift, and go to state 87
    AND              shift, and go to state 88
    OR               shift, and go to state 89
    AUTOPLUS         shift, and go to state 90
    AUTOMINUS        shift, and go to state 91

    $default  reduce using rule 89 (Args)


State 69

   86 Exp: LB Args . RB

    RB  shift, and go to state 112


State 70

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . PLUS_ASSIGN_OP Exp
   57    | Exp . MINUS_ASSIGN_OP Exp
   58    | Exp . MULT_ASSIGN_OP Exp
   59    | Exp . DIV_ASSIGN_OP Exp
   60    | Exp . MOD_ASSIGN_OP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   68    | Exp . MOD Exp
   69    | Exp . AUTOPLUS
   70    | Exp . AUTOMINUS
   74    | MINUS Exp .
   77    | Exp . DPLUS
   87    | Exp . DOT ID

    DPLUS  shift, and go to state 75
    DOT    shift, and go to state 76

    $default  reduce using rule 74 (Exp)


State 71

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . PLUS_ASSIGN_OP Exp
   57    | Exp . MINUS_ASSIGN_OP Exp
   58    | Exp . MULT_ASSIGN_OP Exp
   59    | Exp . DIV_ASSIGN_OP Exp
   60    | Exp . MOD_ASSIGN_OP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   68    | Exp . MOD Exp
   69    | Exp . AUTOPLUS
   70    | Exp . AUTOMINUS
   75    | NOT Exp .
   77    | Exp . DPLUS
   87    | Exp . DOT ID

    DPLUS  shift, and go to state 75
    DOT    shift, and go to state 76

    $default  reduce using rule 75 (Exp)


State 72

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . PLUS_ASSIGN_OP Exp
   57    | Exp . MINUS_ASSIGN_OP Exp
   58    | Exp . MULT_ASSIGN_OP Exp
   59    | Exp . DIV_ASSIGN_OP Exp
   60    | Exp . MOD_ASSIGN_OP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   68    | Exp . MOD Exp
   69    | Exp . AUTOPLUS
   70    | Exp . AUTOMINUS
   71    | AUTOPLUS Exp .
   77    | Exp . DPLUS
   87    | Exp . DOT ID
